# tracing-layer-discord

./: CHANGELOG.md  Cargo.toml  README.md  renovate.json
examples/: exclude_fields_from_messages.rs  exclude_messages_below_level.rs  exclude_messages_by_content.rs  filter_records_by_fields.rs  simple.rs
src/: config.rs  filters.rs  layer.rs  lib.rs  message.rs  model.rs  worker.rs
