[package]
name = "tracing-layer-discord"
version = "0.0.1"
edition = "2018"
license = "Apache-2.0"
description = "Send filtered tracing events to Discord"
repository = "https://github.com/yanorei32/tracing-layer-discord/"
readme = "README.md"
keywords = ["tracing", "layer", "discord", "async", "filter"]
categories = ["development-tools::debugging", "asynchronous"]

[lib]
name = "tracing_layer_discord"
path = "src/lib.rs"

[[example]]
name = "simple"

[features]
default = ["rustls", "gzip"]
gzip = ["reqwest/gzip"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
debug_print = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["test-util", "sync", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
tracing-bunyan-formatter = { default-features = false, version = "0.3" }
