[package]
name = "tracing-layer-discord"
version = "0.0.1"
edition = "2018"
license = "Apache-2.0"
description = "Send tracing events to Discord"
repository = "https://github.com/yanorei32/tracing-layer-discord/"
readme = "README.md"
keywords = ["tracing", "layer", "discord", "async"]
categories = ["development-tools::debugging", "asynchronous"]

[lib]
name = "tracing_layer_discord"
path = "src/lib.rs"

[[example]]
name = "simple"

[features]
default = ["rustls", "gzip"]
gzip = ["reqwest/gzip"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
serde = "1"
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }
reqwest = { version = "0.12", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log"] }
tracing-bunyan-formatter = { version = "0.3", default-features = false }
